WebPage Update for Mobile Devices

--- a/index.html
+++ b/index.html
@@ -24,27 +24,27 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="Home.html" data-home-page-title="Home" data-path-to-root="./" data-include-products="false" class="u-body u-clearfix u-xl-mode" data-lang="en"><header class="u-clearfix u-grey-5 u-header" id="header" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <h3 class="u-align-center u-text u-text-default u-text-1">Robin Waterman</h3>
-        <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1" role="navigation" aria-label="Menu navigation">
+  <body data-home-page="Home.html" data-home-page-title="Home" data-path-to-root="./" data-include-products="false" class="u-body u-clearfix u-xl-mode" data-lang="en"><header class="u-clearfix u-grey-5 u-header" id="header" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-xl u-sheet-1">
+        <h3 class="u-align-center u-text u-text-default-lg u-text-default-xl u-text-1">Robin Waterman</h3>
+        <nav class="u-menu u-menu-one-level u-menu-open-right u-offcanvas u-menu-1" role="navigation" data-responsive-from="XS">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
-            <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-hamburger-link u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#" tabindex="-1" aria-label="Open menu" aria-controls="a6b7">
+            <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-flip-horizontal u-flip-vertical u-hamburger-link u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base u-hamburger-link-1" href="#" tabindex="-1" aria-label="Open menu" aria-controls="a6b7">
               <svg class="u-svg-link" viewBox="0 0 24 24"><use xlink:href="#menu-hamburger"></use></svg>
               <svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"><g><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
 </g></svg>
             </a>
           </div>
           <div class="u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1" role="menubar"><li class="u-nav-item" role="none"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="./" style="padding: 10px 20px;" role="menuitem">Home</a>
-</li><li class="u-nav-item" role="none"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Research.html" style="padding: 10px 20px;" role="menuitem">Research</a>
-</li><li class="u-nav-item" role="none"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Beyond-Research.html" style="padding: 10px 20px;" role="menuitem">Beyond Research</a>
+            <ul role="menubar" class="u-nav u-unstyled u-nav-1"><li role="none" class="u-nav-item"><a role="menuitem" class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="./" style="padding: 10px 20px;">Home</a>
+</li><li role="none" class="u-nav-item"><a role="menuitem" class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Research.html" style="padding: 10px 20px;">Research</a>
+</li><li role="none" class="u-nav-item"><a role="menuitem" class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Beyond-Research.html" style="padding: 10px 20px;">Beyond Research</a>
 </li></ul>
           </div>
           <div class="u-nav-container-collapse" id="a6b7" role="region" aria-label="Menu panel">
-            <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
-              <div class="u-inner-container-layout u-sidenav-overflow">
+            <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav u-sidenav-1">
+              <div class="u-inner-container-layout u-sidenav-overflow" style="padding: 0px 0px 5px;">
                 <div class="u-menu-close" tabindex="-1" aria-label="Close menu"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="./">Home</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-spacing-0 u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="./">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Research.html">Research</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Beyond-Research.html">Beyond Research</a>
 </li></ul>
@@ -52,22 +52,31 @@
             </div>
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
-        </nav><span class="u-file-icon u-icon u-icon-1" data-href="mailto:waterm29@msu.edu"><img src="images/5426891.png" alt=""></span><span class="u-file-icon u-icon u-icon-2" data-href="https://bsky.app/profile/robinwaterman.bsky.social" data-target="_blank"><img src="images/Bluesky-Symbol1-4.png" alt=""></span>
+          <style class="menu-style">@media (max-width: 539px) {
+                    [data-responsive-from="XS"] .u-nav-container {
+                        display: none;
+                    }
+                    [data-responsive-from="XS"] .menu-collapse {
+                        display: block;
+                    }
+                }</style>
+        </nav><span class="u-file-icon u-icon u-icon-1" data-href="mailto:waterm29@msu.edu"><img src="images/5426891.png" alt=""></span><span class="u-file-icon u-icon u-icon-2" data-href="https://bsky.app/profile/robinwaterman.bsky.social" data-target="_blank"><img src="images/Bluesky-Symbol1.png" alt=""></span>
       </div></header>
     <section class="u-clearfix u-section-1" id="block-1">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <div class="data-layout-selected u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
+      <div class="u-clearfix u-sheet u-valign-top-xs u-sheet-1">
+        <div class="data-layout-selected u-clearfix u-expanded-width u-gutter-0 u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
               <div class="u-container-style u-layout-cell u-size-16 u-layout-cell-1">
-                <div class="u-container-layout u-valign-bottom-xl u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xs u-container-layout-1">
-                  <img class="custom-expanded u-image u-image-1" src="images/headshot.jpg" data-image-width="1649" data-image-height="2256">
+                <div class="u-container-layout u-valign-bottom-sm u-valign-top-xs u-container-layout-1">
+                  <img class="custom-expanded u-align-center u-image u-image-1" src="images/headshot.jpg" data-image-width="1649" data-image-height="2256">
                 </div>
               </div>
-              <div class="u-container-style u-layout-cell u-size-44 u-layout-cell-2">
+              <div class="u-align-center u-container-style u-layout-cell u-size-44 u-layout-cell-2">
                 <div class="u-container-layout u-container-layout-2">
-                  <h3 class="u-text u-text-default u-text-1">About Me</h3>
-                  <p class="u-text u-text-default u-text-2">My name is Robin (she/her) and I'm a PhD candidate in Plant Biology and Ecology, Evolution &amp; Behavior at Michigan State University's<a href="https://www.kbs.msu.edu/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1"> Kellogg Biological Station</a>, working in&nbsp;<a href="https://jeffreykconner.com/" target="_blank" class="u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2">Jeff Conner's lab</a>. I study agricultural weed evolution and plasticity. Before starting my PhD I did a combined BA/MA at Wesleyan University in CT, conducting research in <a href="https://sultanlab.research.wesleyan.edu/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-3" target="_blank">Sonia Sultan's lab </a>on transgenerational plasticity in smartweed plants. I am also interested in science outreach, particularly with K-12 students, along with conducting research on broadening participation in STEM.&nbsp;<br>• <a href="mailto:waterm29@msu.edu" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-4">Email</a>&nbsp; &nbsp; &nbsp; &nbsp;• <a href="files/rwaterman_CV_2025.pdf" class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-palette-1-base u-btn-5" target="_blank">CV</a>&nbsp; &nbsp; &nbsp; •&nbsp;<a href="https://scholar.google.com/citations?hl=en&amp;user=VG0LOtkAAAAJ" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-6" target="_blank">Google Scholar</a>
+                  <h3 class="u-align-center u-text u-text-default u-text-1">About Me</h3>
+                  <p class="u-text u-text-default-lg u-text-default-xl u-text-2">My name is Robin (she/her) and I'm a PhD candidate in Plant Biology and Ecology, Evolution &amp; Behavior at Michigan State University's<a href="https://www.kbs.msu.edu/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1"> Kellogg Biological Station</a>, working in&nbsp;<a href="https://jeffreykconner.com/" target="_blank" class="u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2">Jeff Conner's lab</a>. I study agricultural weed evolution and plasticity. Before starting my PhD I did a combined BA/MA at Wesleyan University in CT, conducting research in <a href="https://sultanlab.research.wesleyan.edu/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-3" target="_blank">Sonia Sultan's lab </a>on transgenerational plasticity in smartweed plants. I am also interested in science outreach, particularly with K-12 students, along with conducting research on broadening participation in STEM.&nbsp;<br>
+                    <br>• <a href="mailto:waterm29@msu.edu" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-4">Email</a>&nbsp; &nbsp; &nbsp; &nbsp;• <a href="files/rwaterman_CV_2025.pdf" class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-palette-1-base u-btn-5" target="_blank">CV</a>&nbsp; &nbsp; &nbsp; •&nbsp;<a href="https://scholar.google.com/citations?hl=en&amp;user=VG0LOtkAAAAJ" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-6" target="_blank">Google Scholar</a>
                   </p>
                 </div>
               </div>
