--- a/Home.html
+++ b/Home.html
@@ -1,2 +1,12 @@
 <!DOCTYPE html>
-<html><head><meta charset="utf-8"><meta http-equiv="refresh" content="0;url=./"></head><body></body></html>
+<html><head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JD96DM4GE0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JD96DM4GE0');
+</script>
+  <meta charset="utf-8"><meta http-equiv="refresh" content="0;url=./"></head><body></body></html>
