--- a/Research.html
+++ b/Research.html
@@ -25,7 +25,17 @@
     <meta property="og:title" content="Research">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
-  <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
+  <meta data-intl-tel-input-cdn-path="intlTelInput/">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JD96DM4GE0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JD96DM4GE0');
+</script>
+</head>
   <body data-path-to-root="./" data-include-products="false" class="u-body u-clearfix u-xl-mode" data-lang="en"><header class="u-clearfix u-grey-5 u-header" id="header" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-xl u-sheet-1">
         <h3 class="u-align-center u-text u-text-default-lg u-text-default-xl u-text-1">Robin Waterman</h3>
         <nav class="u-menu u-menu-one-level u-menu-open-right u-offcanvas u-menu-1" role="navigation" data-responsive-from="XS">
